<resources>
    <string name="app_name">"       Petagram"</string>
    <string name="action_settings">Settings</string>
    <string name="Saludo_Inicial">Hola Petagram</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Petagram">"                 Petagram"</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_acerca_de">Acerca de</string>
    <string name="nombre">Nombre</string>
    <string name="Correo">Correo</string>
    <string name="mensaje">Mensaje</string>
    <string name="enviar">Enviar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
